# learning-langchain-krishnaik

./: pyproject.toml  requirements.txt
learning/: 1-lang.ipynb  langchain_chat.ipynb  message.ipynb  stream-batch.ipynb  structured_output.ipynb  tools.ipynb
