[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ai-core-sdk>=2.6.2",
    "generative-ai-hub-sdk>=4.12.4",
    "google-cloud-aiplatform>=1.154.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-community>=4.0.0",
    "langchain-google-genai>=4.2.3",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.1",
    "langgraph>=1.2.2",
    "openai>=2.38.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.2",
]
